# show-path

./: Cargo.toml  LICENSE  README.md
src/: args.rs  main.rs
